--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			and make <br> things happen.<br> You won't be.<br> Dont't count on Motivation.<br> Count on Dicipline. <br> ~ Jocko Willink
 		</p><hr>
 		
-		<p> Hey ! This page is made by Chirag and Sourish ,<br> currently in their 2nd year, pursuing <br>their BTech degrees in civil and mech. engg. respectively.<br> This page contains study  material for the 1st year UG students.<br> For any kind of doubts,help or feedbacks, feel free to contact us.!!
+		<p> Hey ! This page is made by Chirag and Sourish ,<br> currently in their 3rd year, pursuing <br>their BTech degrees in civil and mech. engg. respectively.<br> This page contains study  material for the 1st year UG students.<br> For any kind of doubts,help or feedbacks, feel free to contact us.!!
 		</p>
 		</center>
 	</div>
